<?xml version="1.0" encoding="UTF-8"?>

    <RelativeLayout tools:context=".fragment.ProfileFragment" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView android:layout_height="180dp" android:layout_width="180dp" android:src="@drawable/profile_pic_android" android:layout_marginTop="50dp" android:layout_centerHorizontal="true" android:id="@+id/imgProfilePic"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginTop="10dp" android:id="@+id/txtName" android:textStyle="bold" android:textSize="18sp" android:textColor="#111111" android:textAlignment="center" android:text="@string/piyush_srivastava" android:padding="10dp" android:layout_below="@+id/imgProfilePic"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginTop="10dp" android:id="@+id/txtEmail" android:textSize="18sp" android:textColor="#111111" android:textAlignment="center" android:text="@string/piyushsri20146_gmail_com" android:padding="10dp" android:layout_below="@+id/txtName"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginTop="10dp" android:id="@+id/txtPhone" android:textSize="18sp" android:textColor="#111111" android:textAlignment="center" android:text="@string/_9140950804" android:padding="10dp" android:layout_below="@+id/txtEmail"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginTop="10dp" android:id="@+id/txtAddress" android:textSize="18sp" android:textColor="#111111" android:textAlignment="center" android:text="@string/ipt_balrampur" android:padding="10dp" android:layout_below="@+id/txtPhone"/>
    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginTop="10dp" android:textStyle="bold"
        android:textSize="18sp" android:textColor="#111111" android:textAlignment="center" android:text="@string/android_developer" android:padding="10dp" android:layout_below="@+id/txtAddress"/>

</RelativeLayout>